# Reveles

./: .gitignore  CMake_Config_Output.txt  DC_Motor_Control.ino  Deployment notes  DesignNotes.txt  README.md  ultraSensP1.ino
Reveles/: .qmake.stash  CMakeLists.txt  Reveles.pro  Reveles.pro.bak  main.cpp
Reveles/Arduino/: DC_Motor_Control.ino  DC_Motor_Control2.ino  Integrated Demo File  RevelesArduino.ino  ultraSensP1.ino
Reveles/Arduino/RevelesArduino/: CMakeLists.txt  RevelesArduino.ino
Reveles/Arduino/RevelesArduino/Reveles_Arduino2/: Reveles_Arduino2.ino
Reveles/GUI/: GUI.pro  addlocationdialog.cpp  addlocationdialog.h  locationpushbutton.h  main.cpp  mapview.cpp  mapview.h  noderenders.h  reveles_dbus_adaptor.cpp  reveles_dbus_adaptor.h  reveles_dbus_core_adaptor.cpp  reveles_dbus_core_adaptor.h  reveles_dbus_interface.h  revelescoreadaptor.h  revelesdbus.xml  revelesgui.cpp  revelesgui.h  revelesgui.ui  settingsscreen.cpp  settingsscreen.h  settingsscreen.ui  tile.cpp  tile.h
Reveles/GUI/RevelesGUI/: RevelesGUI.pro  addlocationdialog.cpp  addlocationdialog.h  datatypes.h  locationpushbutton.h  main.cpp  revelesgui.cpp  revelesgui.h  revelesgui.ui  widget.cpp  widget.h  widget.ui
Reveles/Libraries/VL53L0X/: tof.c  tof.h
Reveles/Libraries/picamera/: CMakeCache.txt  cmake_install.cmake  picamdemo
Reveles/Libraries/wiringPi/: libwiringPi.so.2.44
Reveles/Python/: .HOG_Tracker.py.swp  ArduinoPICommunication.py  HOG_Tracker.py
Reveles/RPi/: RPi.pro  RPi.pro.bak  main.cpp  objectdetector.cpp  objectdetector.h  reveles_dbus_adaptor.h  reveles_dbus_core_interface.cpp  reveles_dbus_core_interface.h  reveles_dbus_interface.cpp  reveles_dbus_interface.h  revelesdbus.xml  rpi.h
Reveles/RPi/Common/: datatypes.h  detectionqueue.h  gpio.cpp  gpio.h  logger.cpp  logger.h  messages.h  tile.cpp  tile.h  vector2f.cpp  vector2f.h  vector2i.cpp  vector2i.h  vectorpolar2f.cpp  vectorpolar2f.h  vectorutils.h
Reveles/RPi/Core/: RevelesAnalyticalEngine.cpp  RevelesAnalyticalEngine.h  analyticalengine.cpp  analyticalengine.h  datatypes.h  mainwidget.cpp  mainwidget.h  navigationassisiant.cpp  navigationassisiant.h  objectdetector.cpp  objectdetector.h  revelescore.cpp  revelescore.h  revelesmap.cpp  revelesmap.h
Reveles/RPi/Core/IO/: revelesio.cpp  revelesio.h
Reveles/RPi/GUI/: addlocationdialog.cpp  addlocationdialog.h  keyboard.cpp  keyboard.h  locationpushbutton.h  revelesgui.cpp  revelesgui.h  revelesgui.ui
Reveles/RPi/IO/: gps.cpp  lsm9ds1.cpp  lsm9ds1.h  revelescamera.cpp  revelescamera.h  revelesio.cpp  revelesio.h  tof.cpp  tof.h
Reveles/RPi/Python/: revelesio.cpp  revelesio.h
Reveles/RPi/Sensors/: gps.cpp  gps.h
Reveles/Schematics/: Mux_Board.brd  Mux_Board.pro  Mux_Board.sch
Reveles/VirtualKeyboard/: VirtualKeyboard.pro
Reveles/VirtualKeyboard/plugin/: main.cpp  plugin.pro  qvkimplatforminputcontext.cpp  qvkimplatforminputcontext.h
Reveles/VirtualKeyboard/server/: keyboard.cpp  keyboard.h  main.cpp  server.pro
RevelesIO/: CMakeLists.txt  main.cpp  revelesio.cpp  revelesio.h
